# K5

./: .gitignore  CMakeLists.txt  K5.sln  K5.vcxproj  K5.vcxproj.filters  LICENSE  Makefile  README.md  init.sh
Source/: cubemap.cpp  cubemap.h  engine.cpp  engine.h  model.h  modelrenderer.h  particle.h  particlegenerator.cpp  particlegenerator.h  renderengine.h  textrenderer.h  texture.h  transform.h
Source/Base/: CMakeLists.txt
Source/Base/Core/: CoreApp.cpp  CoreApp.h  Sources.cmake
Source/Base/Engine/: App.h  Sources.cmake
Source/Base/Util/Frame/: FrameStack.cpp  FrameStack.h
Source/Base/Util/Time/: Time.hpp
Source/Base/Util/Util/: Assert.hpp
TestApp/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  main.cpp
base/: CMakeLists.txt  main.cpp  mainframe.cpp  mainframe.h
models/: __error.mtl
shaders/: ambient.frag  ambient.vert
src/: CMakeLists.txt  atlas.cpp  atlas.h  camera.cpp  camera.h  cubemap.cpp  cubemap.h  datatypes.h  demoframe.cpp  demoframe.h  engine.cpp  engine.h  frame.h  gamecomponent.h  gameobject.cpp  gameobject.h  k5.h  light.cpp  light.h  main.cpp  main.h  mat4f.cpp  mat4f.h  mesh.cpp  mesh.h  model.cpp  model.h  modelrenderer.cpp  modelrenderer.h  particle.cpp  particle.h  particlegenerator.cpp  particlegenerator.h  quat.cpp  quat.h  random.h  renderengine.cpp  renderengine.h  resourcemanager.cpp  resourcemanager.h  (+18 more)
src/Base/Core/: CoreApp.cpp  CoreApp.h  Sources.cmake
src/Base/Engine/: App.cpp  Sources.cmake
src/Base/Util/: Sources.cmake
src/Base/Util/Frame/: Frame.h  FrameStack.h
src/Base/Util/Time/: Time.hpp
src/Base/Util/Util/: Assert.hpp  Module.hpp
